src/static/styles/home.css
/* ... */
.deck .titleElement:first-child {
    height: 38px;
}

.flex-1-1-auto {
    flex: 1 1 auto;
}

.flex-start {
    align-items: flex-start;
}

.wrap {
    flex-wrap: wrap;
}

.align-stretch {
    align-items: stretch;
}

.align-center {
    align-items: center;
}

.align-flex-end {
    align-items: flex-end;
}

.justify-center {
    justify-content: center;
}

.justify-flex-end {
    justify-content: flex-end;
}

.pad-in-15p {
    padding-inline: 15px;
}

.pad-b-0-25rem {
    padding-bottom: 0.25rem;
}

.gap-2p {
    gap: 2px;
}

.gap-5p {
    gap: 5px;
}

.gap-8p {
    gap: 8px;
}

.gap-15p {
    gap: 15px;
}

.gap-20p {
    gap: 20px;
}

.gap-10p {
    gap: 10px;
}

.pad-top-1rem {
    padding-top: 1rem;
}

.pad-top-5p {
    padding-top: 5px;
}

.pad-top-10p {
    padding-top: 5px;
}

.pad-bot-5p {
    padding-bottom: 5px;
}

.height-2rem {
    height: 2rem;
}

.height-2p5rem {
    height: 2.5rem;
}

.pad-top-bot-5p {
    padding-top: 5px;
    padding-bottom: 5px;
}

.m-top-bot-0-5rem {
    margin-top: 0.5rem;
    margin-bottom: 0.5rem;
}

.half-width {
    width: 50%;
}

.sixtyfive-width {
    width: 65%;
}

.full-width {
    width: 100%;
}

.ninetyfive-width {
    width: 95%;
}

.fourty-p-width {
    width: 40px;
}

.sixty-p-width {
    width: 60px;
}

.fourty-p-height {
    height: 40px;
}

.border-radius-5px {
    border-radius: 10px;
}

.visible {
    display: block !important;
}

.visible-flex {
    display: flex !important;
}

.invalid-field {
    border-color: red !important;
    transition: border-color 0.2s ease-in-out;
}

.pointerable {
    cursor: pointer;
}

.btn-text-on-hvr:hover {
    color: white;
}

.long-text-ellipsis {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.width-with-icon {
    width: calc(100% - 25px);
}

.visible-on-focus {
    visibility: visible !important;
}

.top-50perc {
    top: 50%;
}

.left-10p {
    left: 10px;
}

.font-size-16p {
    font-size: 16px;
}

.member,
.UTubSelector,
.tagFilter {
    padding: 3px 10px;
    height: 2.2rem;
}

/* UTubs */

.UTubSelector {
    color: var(--grayBadgeSelection);
    border-color: var(--grayBadgeSelection);
    border-radius: 25px;
    border: 2px solid var(--tagBorderColor);
    background-color: var(--cardBackgroundColor);
    margin-top: 5px;
    transition: border-color 0.2s ease-in-out, background-color 0.2s ease-in-out;
}

.UTubSelector:hover {
    cursor: pointer;
    border-color: var(--deckSelectionGreenHover);
    background-color: var(--selectedUTubColorBackground);
}

.active:active,
.UTubSelector:active {
    border-color: var(--deckSelectionGreen);
    background-color: var(--selectedUTubColorBackgroundFocus);
}

.UTubSelector:focus {
    outline: none;
    border: 2px solid var(--deckSelectionGreenHover);
}

.active,
.active:hover .UTubName {
    color: var(--deckSelectionGreen);
    border-color: var(--deckSelectionGreenHover);
    background-color: var(--selectedUTubColorBackground);
}

.updateIcon:hover {
    cursor: pointer;
    color: white;
}

.UTubSelector .memberRole {
    color: var(--memberRoleIconColor);
}

/* Tags */

.tagBadge {
    color: var(--darkSplashGreen);
    background: var(--cardBackgroundColor);
    margin-left: 2px;
    margin-right: 2px;
    padding-left: 6px;
    padding-right: 6px;
    border-radius: 12px;
    white-space: nowrap;
    border: 1px solid var(--borderColor);
}


.urlTagBtnDelete:focus,
.tagBadgeHoverable:hover .urlTagBtnDelete {
    width: 100%;
    opacity: 100%;
}

.tagText {
    transition: padding 0.1s ease-in;
}

.tagBadgeHoverable:hover>.tagText {
    padding-right: 6px;
}

.urlTagBtnDelete:focus~.tagText {
    padding-right: 6px;
}

.urlTagBtnDelete {
    width: 0;
    opacity: 0;
    padding: 0;
    color: var(--tagBadgeDeleteBtnColor);
    transition: width 0.1s ease-in, opacity 0.1s ease-in, color 0.1s ease-in, padding 0.1s ease-in;
}

.urlTagBtnDelete:hover {
    color: var(--tagBadgeDeleteBtnColorHover);
}

.red-icon-disabled {
    opacity: 0.15;
    pointer-events: none;
    cursor: not-allowed;
}

#utubTagBtnUpdateAllOpen,
#unselectAllTagFilters {
    transition: opacity 0.2s ease-in-out;
}

#utubTagBtnUpdateAllOpen,
#utubTagBtnUpdateAllClose {
    border-radius: 4px;
    color: black;
}

#utubTagBtnUpdateAllClose>svg {
    background: var(--updateUTubTagBtnColor);
    border-radius: 4px;
}

#utubTagBtnUpdateAllClose>svg:hover {
    background: var(--updateUTubTagBtnColorHover);
}

#utubTagBtnUpdateAllOpen {
    background: var(--updateUTubTagBtnColor);
}

#utubTagBtnUpdateAllOpen:hover {
    background: var(--updateUTubTagBtnColorHover);
}

.tagFilter {
    display: flex;
    justify-content: space-between;
    align-items: center;

    color: var(--deckSelectionGreen);
    font-weight: bold;

    margin-top: 5px;
    border-radius: 25px;
    transition: background-color 0.3s ease-in-out,
        border-color 0.3s ease-in-out, color 0.3s ease-in-out;
    border: 2px solid var(--tagBorderColor);
    background-color: var(--tagBackgroundColorSelected);
}

.tagFilter:hover {
    border-color: var(--grayBadgeSelection);
}

.tagFilter.unselected:hover {
    background-color: var(--tagBackgroundColorHover);
    border-color: var(--tagBorderColor);
}

.tagFilter.unselected:active,
.tagFilter:active {
    background-color: var(--grayBadgeSelectionFocus);
    color: var(--grayBadgeSelection);
}

.tagFilter.unselected {
    color: var(--grayBadgeSelection);
    background-color: var(--tagBackgroundColor);
    border: 2px solid var(--tagBorderColor);
    border-radius: 25px;
}

.tagFilter.disabled {
    color: var(--grayBadgeSelection) !important;
    background-color: var(--tagBackgroundColor) !important;
    border: 2px solid var(--tagBorderColor) !important;
    cursor: default;
    pointer-events: none;
}

.tagFilter.disabled .utubTagBtnDelete {
    cursor: pointer;
    pointer-events: auto;
}
/* ... */

